specta-jsonschema/tests/snapshots/basic__adjacent-tagging.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 404
expression: "value[\"definitions\"][\"AdjacentlyTagged\"]"
---
{
  "anyOf": [
    {
      "properties": {
        "t": {
          "const": "UnitVariant"
        }
      },
      "required": [
        "t"
      ],
      "type": "object"
    },
    {
      "properties": {
        "c": {
          "type": "string"
        },
        "t": {
          "const": "WithData"
        }
      },
      "required": [
        "t",
        "c"
      ],
      "type": "object"
    },
    {
      "properties": {
        "c": {
          "properties": {
            "x": {
              "format": "int32",
              "type": "integer"
            },
            "y": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "x",
            "y"
          ],
          "type": "object"
        },
        "t": {
          "const": "WithStruct"
        }
      },
      "required": [
        "t",
        "c"
      ],
      "type": "object"
    }
  ],
  "title": "AdjacentlyTagged"
}
