specta-jsonschema/tests/snapshots/basic__enum-with-struct-ref.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 584
expression: "value[\"definitions\"][\"Event\"]"
---
{
  "anyOf": [
    {
      "properties": {
        "kind": {
          "const": "Click"
        },
        "target": {
          "$ref": "#/definitions/Address"
        }
      },
      "required": [
        "kind",
        "target"
      ],
      "type": "object"
    },
    {
      "properties": {
        "kind": {
          "const": "Navigate"
        },
        "url": {
          "type": "string"
        }
      },
      "required": [
        "kind",
        "url"
      ],
      "type": "object"
    }
  ],
  "title": "Event"
}
