specta-jsonschema/tests/snapshots/basic__external-tagging.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 420
expression: "value[\"definitions\"][\"ExternallyTagged\"]"
---
{
  "anyOf": [
    {
      "const": "Unit"
    },
    {
      "properties": {
        "Tuple": {
          "type": "string"
        }
      },
      "required": [
        "Tuple"
      ],
      "type": "object"
    },
    {
      "properties": {
        "Struct": {
          "properties": {
            "value": {
              "format": "int32",
              "type": "integer"
            }
          },
          "required": [
            "value"
          ],
          "type": "object"
        }
      },
      "required": [
        "Struct"
      ],
      "type": "object"
    }
  ],
  "title": "ExternallyTagged"
}
