specta-jsonschema/tests/snapshots/basic__flatten-with-ref.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 694
expression: "value[\"definitions\"][\"Document\"]"
---
{
  "allOf": [
    {
      "properties": {
        "title": {
          "type": "string"
        }
      },
      "required": [
        "title"
      ],
      "type": "object"
    },
    {
      "$ref": "#/definitions/Metadata"
    }
  ],
  "title": "Document"
}
