specta-jsonschema/tests/snapshots/basic__flatten.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 436
expression: "value[\"definitions\"][\"Extended\"]"
---
{
  "allOf": [
    {
      "properties": {
        "extra": {
          "type": "boolean"
        }
      },
      "required": [
        "extra"
      ],
      "type": "object"
    },
    {
      "$ref": "#/definitions/Base"
    }
  ],
  "title": "Extended"
}
