specta-jsonschema/tests/snapshots/basic__internal-tagging.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 396
expression: "value[\"definitions\"][\"InternallyTagged\"]"
---
{
  "anyOf": [
    {
      "properties": {
        "type": {
          "const": "UnitVariant"
        }
      },
      "required": [
        "type"
      ],
      "type": "object"
    },
    {
      "properties": {
        "code": {
          "format": "int32",
          "type": "integer"
        },
        "message": {
          "type": "string"
        },
        "type": {
          "const": "Named"
        }
      },
      "required": [
        "type",
        "code",
        "message"
      ],
      "type": "object"
    }
  ],
  "title": "InternallyTagged"
}
