specta-jsonschema/tests/snapshots/basic__rename-all-camel.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 644
expression: "value[\"definitions\"][\"CamelCaseStruct\"]"
---
{
  "properties": {
    "firstName": {
      "type": "string"
    },
    "isActive": {
      "type": "boolean"
    },
    "lastName": {
      "type": "string"
    }
  },
  "required": [
    "firstName",
    "lastName",
    "isActive"
  ],
  "title": "CamelCaseStruct",
  "type": "object"
}
