specta-jsonschema/tests/snapshots/basic__string-enum.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 385
expression: "value[\"definitions\"][\"Status\"]"
---
{
  "enum": [
    "Active",
    "Inactive",
    "Pending"
  ],
  "title": "Status"
}
