specta-jsonschema/tests/snapshots/basic__untagged.snap
---
source: specta-jsonschema/tests/basic.rs
assertion_line: 412
expression: "value[\"definitions\"][\"Untagged\"]"
---
{
  "anyOf": [
    {
      "type": "string"
    },
    {
      "format": "int32",
      "type": "integer"
    }
  ],
  "title": "Untagged"
}
